Devworks/src/objects/Battle_Station__c.object
<CustomObject>
    <fields>
        <fullName>Crew_Members__c</fullName>
        <label>Crew Members</label>
        <summarizedField>Resource__c.Quantity__c</summarizedField>
        <summaryForeignKey>Resource__c.Battle_Station__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Project_Status__c</fullName>
        <label>Project Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Green</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Yellow</fullName>
                </value>
                <value>
                    <fullName>Red</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Weapons_Status__c</fullName>
        <label>Weapons Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Operational</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Fully Operational</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Battle Station</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Battle Station Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Battle Stations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>